# tp

./: .coveragerc  AUTHORS.rst  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tp-complete.sh
docs/: Makefile  conf.py  index.rst
src/tp/: __main__.py  skeleton.py
src/tp_tests/: test___init__.py
tests/: conftest.py  test_skeleton.py
